[tool.poetry]
name = "loripsum"
version = "0.0.2"
description = "A Python client for lopripsum.net"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
click = "^7.1.2"
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
bump2version = "^1.0.1"
isort = "^5.7.0"
pytest = "^6.2.2"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
